--- a/setup.cfg
+++ b/setup.cfg
@@ -24,14 +24,12 @@ package_dir =
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 install_requires =
-    etos_lib==2.1.0
-    pyscaffold==3.2.3
-    uvicorn==0.12.2
-    fastapi==0.61.1
-    aiohttp[speedups]==3.6.2
-    multidict==5.1.0
-    gql==v3.0.0a3
-    graphql-core<3.2,>=3.1
+    etos_lib==3.2.1
+    pyscaffold~=4.4
+    uvicorn~=0.22
+    fastapi~=0.96.0
+    aiohttp[speedups]~=3.8
+    gql[requests]~=3.4
 
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
 python_requires = >=3.4
