A new SSE server for ETOS API (#44)
* Make a new SSE server in Golang

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
         run: pip install -U setuptools
       - name: Run Tox
         run: tox
+        working-directory: ./python
 
   run-hadolint:
     # The type of runner that the job will run on
