--- a/manifests/base/deployment.yaml
+++ b/manifests/base/deployment.yaml
@@ -10,10 +10,12 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: etos-api
+      app.kubernetes.io/component: api
   template:
     metadata:
       labels:
         app.kubernetes.io/name: etos-api
+        app.kubernetes.io/component: api
     spec:
       serviceAccountName: etos-api
       containers:
