--- a/manifests/base/sse/deployment.yaml
+++ b/manifests/base/sse/deployment.yaml
@@ -9,11 +9,13 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: etos-sse
+      app.kubernetes.io/name: etos-api
+      app.kubernetes.io/component: sse
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: etos-sse
+        app.kubernetes.io/name: etos-api
+        app.kubernetes.io/component: sse
     spec:
       serviceAccountName: etos-sse
       containers:
